@@ -261,10 +261,8 @@ with more of the indented list content.<p
 			  ><dd
 			  >No newline separation even in indented lists.
         We can have any paragraph level element that we normally
-        can, like headers<p
-			    ><h3
-			      >Level 3 header</h3
-			      ></p
+        can, like headers<h3
+			    >Level 3 header</h3
 			    ><p
 			    >with some content&#8230;</p
 			    ><ul
